--- a/perfis/templates/perfil.html
+++ b/perfis/templates/perfil.html
@@ -12,6 +12,7 @@
     <p>email: {{perfil.email}}</p>
     <p>telefone: {{perfil.telefone}}</p>
     <p>empresa: {{perfil.nome_empresa}}</p>
+    <a href="{% url 'convidar' perfil.id %}">Convidar</a>
 
 </body>
 
