--- a/perfis/templates/perfil.html
+++ b/perfis/templates/perfil.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title></title>
-</head>
-
-<body>
-    <h1>Detalhe do perfil</h1>
-    <p>nome: {{perfil.nome}}</p>
-    <p>email: {{perfil.email}}</p>
-    <p>telefone: {{perfil.telefone}}</p>
-    <p>empresa: {{perfil.nome_empresa}}</p>
-    <a href="{% url 'convidar' perfil.id %}">Convidar</a>
-
-</body>
-
-</html>
+{% extends "base.html" %} {% block body %}
+<div class="row">
+    <div class="col-lg-12">
+        <h2 style="margin-top:0">{{perfil.nome}}</h2>
+        <address>
+          <strong>{{perfil.nome_empresa}}</strong><br>
+          <abbr title="Telefone">Tel:</abbr> {{perfil.telefone}}<br>
+          <a href="mailto:{{perfil.email}}">{{perfil.email}}</a>
+      </address> {% if convite_existente %}
+        <div class="well well-sm">Vocês estão conectados!</div>
+        {% else %}
+        <a href="{% url 'convidar' perfil.id %}" class="btn btn-success" role="button">convidar</a> {% endif %}
+    </div>
+</div>
+{% endblock %}
