--- a/perfis/templates/base.html
+++ b/perfis/templates/base.html
@@ -15,6 +15,7 @@
         <div class="header">
             <ul class="nav nav-pills pull-right">
                 <li class=""><a href="{% url 'index' %}">{{perfil_logado.nome}}</a></li>
+                <li class=""><a href="{% url 'registrar' %}">Cadastrar</a></li>
                 <li class=""><a href="/logout/">Logout</a></li>
             </ul>
             <h3 class="text-muted">ConnectedIn</h3>
